# Crewai_Creating_Search_agent

./: .gitignore  README-backup.md  pyproject.toml  report.md  report_AI_LLM-by-Agent.md  report_Quantum_Computing_and_Blockchain_by_Agent+SERP-tools.md  report_Quantum_Computing_and_Blockchain_by_Agent.md
Notebook/: L2_Create-Agents-to-Research-and-Write-an-Article.ipynb
src/crewai_creating_search_agent/: crew.py  main.py
